Add Add-Opens to JAR to make it properly executable on newer JVMs